syntax = "proto3";

package api.user.v1;

option go_package = "fkratos/api/sys/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply


// 岗位
service Job {
  //岗位列表
  rpc SysJobList (SysJobListReq) returns (SysJobListReply);
  //单个岗位
  rpc SysJobInfo (SysJobInfoReq) returns (SysJobInfoReply);
  //保存岗位
  rpc SysJobStore (SysJobStoreReq) returns (SysJobStoreReply);
  //删除岗位
  rpc SysJobDel (SysJobDelReq) returns (SysJobDelReply);
}

//请求-岗位列表
message SysJobListReq {
}
//响应-岗位列表
message SysJobListReply {
}


//请求-岗位信息
message SysJobInfoReq {
}
//响应-岗位信息
message SysJobInfoReply {
}


//请求-岗位保存
message SysJobStoreReq {
}
//响应-岗位保存
message SysJobStoreReply {
}


//请求-岗位删除
message SysJobDelReq {
}
//响应-岗位删除
message SysJobDelReply {
}

